InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleAssignment__c/fields/vlocity_ins__HeaderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__HeaderId__c</fullName>
    <formula>vlocity_ins__RuleId__r.vlocity_ins__HeaderId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderId</label>
    <type>Text</type>
</CustomField>