InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleAssignment__c/fields/vlocity_ins__RuleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RuleId__c</fullName>
    <label>Vlocity Rule</label>
    <referenceTo>vlocity_ins__Rule__c</referenceTo>
    <relationshipLabel>Vlocity Rule Assignments</relationshipLabel>
    <relationshipName>Vlocity_Rule_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>