InsuranceOrg/force-app/main/default/objects/vlocity_ins__RuleAssignment__c/fields/vlocity_ins__RuleType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RuleType__c</fullName>
    <formula>TEXT(vlocity_ins__RuleId__r.vlocity_ins__RuleType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Type</label>
    <type>Text</type>
</CustomField>